test/errhandling/psahabu/needs-catchall.good
needs-catchall.chpl:4: error: try without a catchall in a non-throwing function
